--- a/알아둘용어.html
+++ b/알아둘용어.html
@@ -269,6 +269,22 @@
         인식<br />
         6. "추상화", "상속", "정보은닉과 캡슐화", "다형성" 등의 특징이 있다.
       </li>
+      <li>
+        <h3>객체지향(Object-oriented Programming, OOP) 장단점</h3>
+        <h5>코드 재사용 용이</h5>
+        - 이미 잘 만들어진 클래스를 사용할 수 있고 상속을 받아 확장하여 사용할
+        수 있다. <br />
+        <h5>유지보수가 쉽다</h5>
+        - 절차지향(구조적) 프로그래밍에 비해 수정해야 할 부분을 쉽게 찾고 변경
+        할 수 있다. <br />
+        <h5>대형 프로젝트에 적합하다</h5>
+        - 클래스 단위로 모듈화가 쉽기 때문에 협업과 업무 분담이 쉽다.<br />
+        <h5>단점</h5>
+        1. 처리 속도가 절차 지향보다 상대적으로 늦다.<br />
+        2. 객체가 많아지면 용량이 커질 수 있다.<br />
+        3. 추상화 등의 객체 설계를 하는데 많은 시간과 노력이 필요하다.<br />
+        설계를 잘 하지 못하면 절차 지향보다 프로젝트가 성공하기 어렵다.<br />
+      </li>
     </ul>
   </body>
 </html>
