--- a/알아둘용어.html
+++ b/알아둘용어.html
@@ -285,6 +285,19 @@
         3. 추상화 등의 객체 설계를 하는데 많은 시간과 노력이 필요하다.<br />
         설계를 잘 하지 못하면 절차 지향보다 프로젝트가 성공하기 어렵다.<br />
       </li>
+      <li>
+        <h3>Interface 를 사용한 class 다형성 구조</h3>
+        <h5>1. Java의 Interface</h5>
+        1. 클래스를 정의하기 위한 설계로 역할을 수행하는 특별한 class<br />
+        2. Interface 를 implements(상속) 한 클래스는 Interface 에 정의된 모든
+        method를 반드시 선언(작성)해야한다.<br />
+        <h5>2. Interface 를 사용한 객체의 다형성</h5>
+        1. Interface 는 implements 한 클래스들의 Parent 이다.<br />
+        2. Interface 로 객체를 선언하고, implements 한 클래스의 생성자로
+        인스턴스를 생성한다.<br />
+        3. 업그레이드 된 클래스를 사용하고자 할때 생성자만 교체하면 다른 코드는
+        그대로 사용가능하다.
+      </li>
     </ul>
   </body>
 </html>
