--- a/알아둘용어.html
+++ b/알아둘용어.html
@@ -308,6 +308,19 @@
         5. View는 사용자와 상호작용하며<br />
         6. Controller 는 데이터와 비즈니스 로직을 담당한다.
       </li>
+      <li>
+        <h3>객체 생성</h3>
+        // Scanner 클래스를 사용하여 scan 객체 생성<br />
+        Scanner scan = new Scanner(System.in);<br />
+        // Random 클래스를 사용하여 Random 객체 생성<br />
+        Random random = new Random();<br />
+        // String 클래스를 사용하여 문자열형 객체 생성<br />
+        String string = new String();<br />
+        // System.in 객체를 사용하여 is 객체 생성<br />
+        InputStream is = System.in;<br />
+        // System.out 객체를 사용하여 os 객체 생성<br />
+        OutputStream os = System.out;
+      </li>
     </ul>
   </body>
 </html>
