--- a/알아둘용어.html
+++ b/알아둘용어.html
@@ -321,6 +321,17 @@
         // System.out 객체를 사용하여 os 객체 생성<br />
         OutputStream os = System.out;
       </li>
+      <li>
+        <h3>DBMS(DataBase Management System)</h3>
+        1. 많은 데이터를 스토리지에 보관하고 관리하는 소프트웨어<br />
+        2. 스토리지에 보관된 많은 데이터 중에서 원하는 조건의 데이터를 쉽게
+        조회할 수 있게 구성된 소프트웨어<br />
+        <h3>RDBMS(Relationship DataBase Management System</h3>
+        1. 관계형 데이터베이스 시스템<br />
+        2. 많은 데이터를 관리하는 데이터베이스 소프트웨어 중 모든 데이터를
+        "테이블"이라는 관점으로 보여주는 시스템<br />
+        3. SQL(Structed Query Lang.) 명령어를 사용하여 데이터를 관리
+      </li>
     </ul>
   </body>
 </html>
