--- a/알아둘용어.html
+++ b/알아둘용어.html
@@ -332,6 +332,22 @@
         "테이블"이라는 관점으로 보여주는 시스템<br />
         3. SQL(Structed Query Lang.) 명령어를 사용하여 데이터를 관리
       </li>
+      <li>
+        <h3>SQL</h3>
+        1. RDMBS 에 접근하기 위한 데이터베이스 코딩언어<br />
+        2. DDL,DML,DCL,TCL 등이 있다<br />
+        <h3>DDL(Data Definition Lang.</h3>
+        1. 데이터저장소, Table, 사용자, 인덱스 등 데이터베이스 객체(object)
+        생성, 제거, 변경<br />
+        2. CREATE: 생성, DROP: 제거, ALTER: 변경<br />
+        <h3>DML(data manipulation Lang)</h3>
+        1. 생성된 데이터 Table을 기준으로 CRUD 실행<br />
+        2. INSERT(create, 추가), SELECT(Read, 조회), UPDATE(update, 변경),
+        DELETE(delete, 삭제)<br />
+        <h3>DCL(Data Control Lang.)</h3>
+        1. 데이터베이스의 접근 권한 등을 설정<br />
+        2. GRANT: 권한 부여, REVOKE: 권한 회수
+      </li>
     </ul>
   </body>
 </html>
