--- a/알아둘용어.html
+++ b/알아둘용어.html
@@ -348,6 +348,18 @@
         1. 데이터베이스의 접근 권한 등을 설정<br />
         2. GRANT: 권한 부여, REVOKE: 권한 회수
       </li>
+      <li>
+        <h3>인터페이스</h3>
+        1. 팀프로젝트에서 코드 규약을 정의한다<br />
+        2. 여러 구현체에서 사용하는 공통적인 부분을 추상화 한다<br />
+        클래스의 다형성이라고 한다<br />
+        3. 객체간의 "연결, 소통"을 돕는 중간 역할을 한다<br />
+        4. 메서드의 프로토 타입만 정의한다<br />
+        5. 메서드의 구체적인 코드가 없다<br />
+        6. 인터페이스를 상속(implements)하는 구현체 클래스는<br />
+        인터페이스에 정의된 모든 메서드를 반드시 구현해야 한다<br />
+        7. 클래스의 다형성을 가능하게 하여 코드간 결합도를 낮출 수 있다
+      </li>
     </ul>
   </body>
 </html>
