--- a/알아둘용어.html
+++ b/알아둘용어.html
@@ -373,6 +373,19 @@
         1) main() method 를 작성하고 Service 클래스와 연결<br />
         2) Data 생성, Data 확인, 연산 후 Data 확인, 최종 결과 출력 확인
       </li>
+      <li>
+        <h3>객체의 독립성</h3>
+        1. 클래스를 통해 선언 및 생성된 객체는 추상화된 Data(변수)와
+        행위(method)를 포함한다. <br />
+        2. 생성된 객체는 독립적이며, 다른 객체에 대하여 비정상적인 접근을
+        허용하지 않는다. <br />
+        3. 객체는 1개 일 수 있고, 배열과 리스트를 통하여 다수의 객체일 수도
+        있다. <br />
+        4. 배열 요소에 "저장된" 각각의 객체는 다른 요소의 객체와 완전히
+        독립적이다. <br />
+        5. 리스트 요소에 "추가된" 각각의 객체는 다른 요소의 객체와 완전히
+        독립적이다.
+      </li>
     </ul>
   </body>
 </html>
