--- a/알아둘용어.html
+++ b/알아둘용어.html
@@ -386,6 +386,18 @@
         5. 리스트 요소에 "추가된" 각각의 객체는 다른 요소의 객체와 완전히
         독립적이다.
       </li>
+      <li>
+        <h3>프레임 워크</h3>
+        1. 차, 비행기, 배 같이 탈것과 같은 잘 만들어진 "운송수단"<br />
+        2. 여행을 하려면 운송수단에 사람이 탑승하여 시동을 걸고, 기어를 넣고,
+        핸들을 조작하고, 운전을 해야함 3. 운송 수단은 서로 대체할 수 없음<br />
+        4. 하늘을 날기 위해선 비행기를 타야하고 도로를 달리려면 자동차가 유리함,
+        바다에서는 배를 타야만 함<br />
+        5. 애초에 목적에 맞게 만들어져 탈것을 처음부터 직접 만들 필요가 없음<br />
+        6. 정해진 규칙에 따라 시동을 걸고 운행 하기만 하면 됨<br />
+        7. 프레임워크는 이미 프로그래밍할 규칙이 정해져 있는 클래스, 모듈을
+        활용하여 규칙에 맞춰 개발자의 아이디어를 구현하는데 도움을 주는 도구
+      </li>
     </ul>
   </body>
 </html>
