--- a/알아둘용어.html
+++ b/알아둘용어.html
@@ -398,6 +398,25 @@
         7. 프레임워크는 이미 프로그래밍할 규칙이 정해져 있는 클래스, 모듈을
         활용하여 규칙에 맞춰 개발자의 아이디어를 구현하는데 도움을 주는 도구
       </li>
+      <li>
+        <h3>커뮤니티</h3>
+        1. 코딩 = 개발? 협업<br />
+        2. 누군과 나와 대화를 할 때 숨이 막혀 한다면?<br />
+        3. 사소한 대화를 하는 동안 아이디어가 떠오르고, 문제 해결이 된다면?<br />
+        <h3>생산성</h3>
+        1. 개발은 시간 싸움이다 : 야근은 필수가 아닌 선택<br />
+        2. 환상적인 코드보다 빨리 완성된 코드가 좋은 코드이다. 단 버그가
+        없어야한다.<br />
+        <h3>지속적인 학습</h3>
+        1. 학습은 좋은 개발자가 계속 좋은 개발자로 남는 길<br />
+        2. 학습은 보통 개발자가 좋은 개발자가 되게 하는 요소<br />
+        <h3>코드리딩과 라이팅</h3>
+        1. 코드리딩 : 만들어진 소스코드를 리딩하고 명명규칙 파악하기 : 협업에서
+        가장 중요<br />
+        2. 잘 정돈되고 직관적이며 네이밍이 잘된 코드 작성하기: 내 코드는 혼자
+        보는것이 아니다<br />
+        3. 내가 만든 코드는 누가봐도 쉽게 이해할 수 있어야한다<br />
+      </li>
     </ul>
   </body>
 </html>
