--- a/알아둘용어.html
+++ b/알아둘용어.html
@@ -417,6 +417,26 @@
         보는것이 아니다<br />
         3. 내가 만든 코드는 누가봐도 쉽게 이해할 수 있어야한다<br />
       </li>
+      <li>
+        <h3>HTTP에서 데이터를 보내는 방식(Request method)</h3>
+        <h5>GET method</h5>
+        1. GET은 서버로부터 정보를 조 회하기 위해 설계되었다<br />
+        2. URL 주소에 쿼리 스트링(?변수=값&변수=값) 형식으로 전송한다. GET은
+        요청을 전송할 때 필요한 데이터를 Body에 담지 않고, 쿼리 스트링을 통해
+        전송한다<br />
+        3. 단순한 값을 전송할 때 사용한다<br />
+        4. 모든 데이터가 노출되어 보안에 취약하다. 민감 정보는 절대 담아서는
+        안된다<br />
+        5. 전체 길이는 255자를 넘지 못한다<br />
+        <h5>POST method</h5>
+        1. POST 는 리소스를 생성/변경하기 위해 설계되었다<br />
+        2. HTTP 는 프로토콜의 Body 에 데이터를 실어서 전송한다<br />
+        3. 보통 form tag 로 둘러쌓인 input tag에 입력된 값을 전송할 때
+        사용한다<br />
+        4. 전송하는 데이터가 표면상으로 노출되지 않는다<br />
+        5. 전송하는 데이터의 크기에 제한이 없다 그림 파일등도 전송할 수 있다<br />
+        6. 전송하는 데이터를 암호하하여 전송하기 용이하다
+      </li>
     </ul>
   </body>
 </html>
