--- a/알아둘용어.html
+++ b/알아둘용어.html
@@ -437,6 +437,19 @@
         5. 전송하는 데이터의 크기에 제한이 없다 그림 파일등도 전송할 수 있다<br />
         6. 전송하는 데이터를 암호하하여 전송하기 용이하다
       </li>
+      <li>
+        <h3>클래스와 인스턴스(객체)</h3>
+        <h5>클래스</h5>
+        - 어떤 문제를 해결하기 위한 데이터를 만들기 위해 추상화를 거쳐
+        속성(Attribute), 행위(Behavior)를 변수와 메서드 개념으로 정의한것<br />
+        <h5>인스턴스(객체)</h5>
+        1. 클래스에 정의된 것을 토대로 하여 실제 정보처리 연산을 수행하는데
+        사용되는 데이터<br />
+        2. 클래스 또는 인스턴스 Type 으로 선언하고 생성자를 호출하여 초기화 한
+        상태<br />
+        StudentVO stVO = new StudentVO();<br />
+        Service service = new ServiceImpl();
+      </li>
     </ul>
   </body>
 </html>
