--- a/알아둘용어.html
+++ b/알아둘용어.html
@@ -445,7 +445,7 @@
         <h5>인스턴스(객체)</h5>
         1. 클래스에 정의된 것을 토대로 하여 실제 정보처리 연산을 수행하는데
         사용되는 데이터<br />
-        2. 클래스 또는 인스턴스 Type 으로 선언하고 생성자를 호출하여 초기화 한
+        2. 클래스 또는 인터페이스 Type 으로 선언하고 생성자를 호출하여 초기화 한
         상태<br />
         StudentVO stVO = new StudentVO();<br />
         Service service = new ServiceImpl();
