--- a/알아둘용어.html
+++ b/알아둘용어.html
@@ -466,6 +466,28 @@
         영향을 미친다. - 이일민, 토비의 스프링 3.1, 에이콘(2012), p113 즉, B의
         기능이 추가 또는 변경되거나 형식이 바뀌면 그 영향이 A에 미친다.
       </li>
+      <li>
+        <h3>오류(Error)</h3>
+        1. 코딩 문법 오류로 인한 "컴파일" 시 오류와 "런타임"시 널포인트 참조와
+        같은 오류가 있으며 심각한 문제를 야기시켜 프로세스(애플리케이션)가 종료
+        되거나 중단 된다<br />
+        2. 시스템 에러는 컴퓨터 하드웨어의 오동작 또는 고장으로 인해 응용
+        프로그램에 이상이 생겼거나 JMV 실행에 문제가 생겼을 경우 발생한다<br />
+        3. 코딩 문법 오류는 IDE 가 알려주거나 컴파일 단계에서 발견된다<br />
+        4. 런타임시 오류는 사전에 개발자가 미리 예측하기 어려운 경우가 많기
+        때문에 문법상 강제 상황을 제외하고 애플리케이션의 런타임 옹류에 대한
+        처리(해결)를 하지 않는 경우가 많다<br />
+        5, 오류가 발생하는 상황을 항상 미리 예측하여 적절한 Exception 핸들링
+        하는것이 좋다<br />
+        <h3>예외(Exception)처리</h3>
+        1. 예외 상황도 오류와 같이 응용프로그램, 프로세스를 종료시키는 것은
+        유사하다<br />
+        2. 개발자가 예측할 수 있는 상황이 많으며 적절한 처리(Exception Handling)
+        를 수행하여 최소한 응용프로그램, 프로세스가 종료 되거나 중단되지 않도록
+        해야한다<br />
+        3. Exception 처리가 잘 되어 프로세스 종료를 최대한 방지하는 것이 좋은
+        애플리케이션이다
+      </li>
     </ul>
   </body>
 </html>
