--- a/알아둘용어.html
+++ b/알아둘용어.html
@@ -488,6 +488,78 @@
         3. Exception 처리가 잘 되어 프로세스 종료를 최대한 방지하는 것이 좋은
         애플리케이션이다
       </li>
+      <li>
+        <h3>추상화</h3>
+        - 현실 세계를 컴퓨터 프로그래밍화하는 단계<br />
+        - 불필요한 정보는 버리고, 중요한 정보만 간추려 공통 속성 기능을 묶는
+        단계<br />
+        <h3>캡슐화</h3>
+        - 서로 관련된 기능과 특성을 한곳에 모으고 분류하여 재활용을 용이하게
+        하는것<br />
+        <h3>정보은닉</h3>
+        - 캡슐화 된 정보에 직접 접근하지 못하도록 하고 우회로를 통해 접근하여
+        정보를 보호하는 것<br />
+        <h3>상속</h3>
+        - 이미 견고하게 잘 만들어진 클래스를 가져와 자신만의 기능을 추가
+        확장하여 사용하는 것<br />
+        - 단순 복사 붙이기와 차별화 된 것<br />
+        <h3>다형성</h3>
+        - 같은 이름을 가지고 있지만 서로 다른 일을 하도록 구현하는것<br />
+        - 사용하는 측에서는 데이터의 타입에 관계없이 같은 이름을 호출하여 원하는
+        결과를 얻을 수 있음<br />
+      </li>
+      <li>
+        <h3>UI(User Interface)</h3>
+        - 사용자가 제품이나 서비스를 사용할때 마주하게 되는것<br />
+        - 사용자가 제품이나 서비스와 상호작용 할 수 있도록 만들어진 매개체<br />
+        - UI 디자인은 폰트, 칼라, 레이아웃과 같이 사용자가 마주하게 될 시각적인
+        디자인<br />
+        <h3>UX(User Expeience)</h3>
+        - 사용자 경험의 약자로 사용자가 어떠한 서비스나 제품을 직간접적으로
+        이용하면서 느끼는 종합적인 만족을 의미<br />
+        - UX 디자인이란 사용자에게 만족스러운 경험을 제공하는 UI를 디자인
+        하는것<br />
+        - 사용자가 만족할 수 있도록 사용자 중심적으로 설계된 디자인<br />
+        - 기존의 경험을 바탕으로 새로운 제품이나 서비스를 쉽게 사용할 수 있도록
+        해야한다<br />
+      </li>
+      <li>
+        <h3>비동기실행</h3>
+        1. 어떤 식당에 서빙을 하는 직원이 한명 있다<br />
+        2. A 손님이 식당에 들어와 자리에 앉는다<br />
+        3. 서빙 직원이 손님에게 주문을 받고, 주방에 주문을 전달한 후 "서빙
+        직원은 기다린다"<br />
+        4. 이때 다른 B 손님이 들어와 테이블에 앉는다<br />
+        5. 주방에서 주문이 완료되는 동안 B 손님에게서 주문을 받는다<br />
+        6. A 손님의 주문이 완료되고 조리된 음식을 A 손님 테이블로 옮긴다<br />
+        7. A 손님이 식사하는 동안 기다린다<br />
+        8. B 손님의 주문이 완료되고 조리된 음식을 B 손님 테이블로 옮긴다<br />
+        9. B 손님이 식사를 하는 동안 A 손님은 식사를 마치고 카운터에서 계산을
+        마무리한다<br />
+      </li>
+      <li>
+        <h3>객체지향 SOLID 원칙</h3>
+        <h5>단일책임원칙(SRP, single responsibility principle)</h5>
+        1. 한(one) 클래스는 하나(single)의 책임(기능)만 가져야한다<br />
+        2. 한 클래스를 변경했을때 애플리케이션 전반에 수정이 최소화 되도록 하는
+        원칙<br />
+        <h5>개방-폐쇄원칙(OCP, open-close principle)</h5>
+        1. 서로 관련된 기능과 특성을 한곳에 모으고 분류하여 재활용을 용이하게
+        하는것<br />
+        2. 결합도는 낮추고 응집도는 높여라<br />
+        <h5>리스코프 치원 원칙(LSP, liscov substitution principle)</h5>
+        1. 객체는 프로그램의 정확성을 깨지 않으면서 하위 타입의 인스턴스로 바꿀
+        수 있어야한다<br />
+        2. 하위 클래스는 인터페이스 규약을 지켜서 작성해야한다(다형성을 지원하기
+        위한 원칙)<br />
+        <h5>인터페이스 분리원칙(ISP, interface segration principle)</h5>
+        1. 범용(준비된) 인터페이스 하나 둘 보다는 특정 클라이언트를 위한
+        여러개의 인터페이스 분리가 더 좋다<br />
+        <h5>의존관계 역전 원칙(DIP, dependency inversion principle)</h5>
+        1. 구체화가 아니라 추상화에 의존해야한다<br />
+        2. 구현 클래스(구현체)가 아니라 인터페이스(역할)에 의존하여
+        작성해야한다<br />
+      </li>
     </ul>
   </body>
 </html>
